5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1674_1105.log
== TEST (2019-04-25 11:01:53) 
-- CODE:
gto= input("insira o Brasao: ")
print("Entrada:",gto)

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:21) 
-- CODE:
gto= input("insira o Brasao: ")
print("Entrada:",gto)
if (gto=="lobo") or (gto=="leao") or (gto=="veado") or (gto=="dragao") or (gto=="rosa") or (gto=="sol") or(gto=="lula") or(gto=="esfolado")or(gto=="turta"):
	if (gto=="lobo"):
		print("Casa: Stark")
	elif(gto=="leao"):
		print("Casa: Lannister")
	elif(gto=="veado"):
		print("Casa: Baratheon")
	elif(gto=="dragao"):
		print("Casa: Targaryen")
	elif(gto=="rosa"):
		print("Casa: Tyrell")
	elif(gto=="sol"):
		print("Casa: Martell")
	elif(gto=="lula"):
		print("Casa: Greyjoy)
	elif(gto=="esfolado"):
		print("Casa: Bolton")
	elif(gto=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- ERROR:
File "XXXX", line 17
    print("Casa: Greyjoy)
                        ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:10:30) 
-- CODE:
gto= input("insira o Brasao: ")
print("Entrada:",gto)
if (gto=="lobo") or (gto=="leao") or (gto=="veado") or (gto=="dragao") or (gto=="rosa") or (gto=="sol") or(gto=="lula") or(gto=="esfolado")or(gto=="turta"):
	if (gto=="lobo"):
		print("Casa: Stark")
	elif(gto=="leao"):
		print("Casa: Lannister")
	elif(gto=="veado"):
		print("Casa: Baratheon")
	elif(gto=="dragao"):
		print("Casa: Targaryen")
	elif(gto=="rosa"):
		print("Casa: Tyrell")
	elif(gto=="sol"):
		print("Casa: Martell")
	elif(gto=="lula"):
		print("Casa: Greyjoy")
	elif(gto=="esfolado"):
		print("Casa: Bolton")
	elif(gto=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:10:51) 
-- CODE:
gto= input("insira o Brasao: ").lower()
print("Entrada:",gto)
if (gto=="lobo") or (gto=="leao") or (gto=="veado") or (gto=="dragao") or (gto=="rosa") or (gto=="sol") or(gto=="lula") or(gto=="esfolado")or(gto=="turta"):
	if (gto=="lobo"):
		print("Casa: Stark")
	elif(gto=="leao"):
		print("Casa: Lannister")
	elif(gto=="veado"):
		print("Casa: Baratheon")
	elif(gto=="dragao"):
		print("Casa: Targaryen")
	elif(gto=="rosa"):
		print("Casa: Tyrell")
	elif(gto=="sol"):
		print("Casa: Martell")
	elif(gto=="lula"):
		print("Casa: Greyjoy")
	elif(gto=="esfolado"):
		print("Casa: Bolton")
	elif(gto=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.197016
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:48:47) 
-- CODE:
gto= input("insira o Brasao: ").lower()
print("Entrada:",gto)
if (gto=="lobo") or (gto=="leao") or (gto=="veado") or (gto=="dragao") or (gto=="rosa") or (gto=="sol") or(gto=="lula") or(gto=="esfolado")or(gto=="turta"):
	if (gto=="lobo"):
		print("Casa: Stark")
	elif(gto=="leao"):
		print("Casa: Lannister")
	elif(gto=="veado"):
		print("Casa: Baratheon")
	elif(gto=="dragao"):
		print("Casa: Targaryen")
	elif(gto=="rosa"):
		print("Casa: Tyrell")
	elif(gto=="sol"):
		print("Casa: Martell")
	elif(gto=="lula"):
		print("Casa: Greyjoy")
	elif(gto=="esfolado"):
		print("Casa: Bolton")
	elif(gto=="turta"):
		print("Casa: Tully")
else:
	print("Brasao invalido")
-- EXECUTION TIME:
0.17977
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
